Fixed problem with increasing line spacing in quote blockblockquote

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ blockquote {
 blockquote::before {
     content: "\201C";
     font-size: 3.3rem;
+    line-height: 0;
     margin-right: 15px;
 }
 button {
